TEAM-43 - Increase width of filter options div to prevent overlap on high resolution screens

--- a/FrontEnd/src/css/FilterOptions.css
+++ b/FrontEnd/src/css/FilterOptions.css
@@ -1,4 +1,4 @@
 .filter-options {
     margin: 1.75rem auto;
-    width: 25vw;
+    width: 35vw;
 }
